Layout/behavior major changes

--- a/client/index.html
+++ b/client/index.html
@@ -28,19 +28,15 @@
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#">Simple Notebook</a>
+                <h1><a class="navbar-brand" href="#">Simple Notebook</a></h1>
             </div>
         </div>
         <!-- /.container -->
     </nav>
-    <div class="container">
+    <div class="container-fluid">
 
-        <div class="row">
-            <div class="col-lg-12">
-                <my-app>Loading AppComponent content here ...</my-app>
-              </div>
-        </div>
-        <!-- /.row -->
+      <my-app>Loading AppComponent content here ...</my-app>
+
 
     </div>
     <!-- /.container -->
